package kz.aitu.assignment2.factorymethod;

public interface Transport {
    void deliver(String cargo, String destination);
}