@startuml
title Factory Method — Logistics

interface Transport {
  +deliver(cargo: String, destination: String): void
}

class Truck
class Ship

abstract class Logistics {
  #createTransport(): Transport
  +planDelivery(cargo: String, destination: String): void
}

class RoadLogistics {
  #createTransport(): Transport
}

class SeaLogistics {
  #createTransport(): Transport
}

Transport <|.. Truck
Transport <|.. Ship

Logistics <|-- RoadLogistics
Logistics <|-- SeaLogistics

Logistics ..> Transport : creates/uses
RoadLogistics ..> Truck : creates
SeaLogistics ..> Ship : creates
@enduml
